<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearListaCompras">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/text_slideshow"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/crear_lista_de_compra"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_slideshow3"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total_0"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.424"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonCrearLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_lista_de_compra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <CheckBox
        android:id="@+id/checkProducto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceite_1l_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <CheckBox
        android:id="@+id/checkProducto4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harina_1kg_800"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <CheckBox
        android:id="@+id/checkProducto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_n_200g_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <CheckBox
        android:id="@+id/checkProducto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fideos_320g_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>